# pdf-add-outline

./: README.md  pyproject.toml
pdf_add_outline/: __init__.py  main.py
tests/: test_parsing.py
tests/fixtures/: situated_learning.json  situated_learning.txt
